test/classes/constructors/error-constructor-return-type.good
error-constructor-return-type.chpl:2: error: constructors may not declare a return type
